--- a/arch/arm64/boot/dts/qcom/touchscreen.dtsi
+++ b/arch/arm64/boot/dts/qcom/touchscreen.dtsi
@@ -6,7 +6,7 @@
 
 	touchscreen {
 		status = "ok";
-		compatible = "focaltech,fts", "novatek,NVT-ts-spi";
+		compatible = "focaltech,fts";
 		reg = <0>;
 
 		/* SPI configuration */
@@ -31,17 +31,5 @@
 
 		focaltech,max-touch-number = <10>;
 		focaltech,display-coords = <0 0 1080 2400>;
-
-		/*
-		 * NT36675
-		 */
-
-		/* Novatek GPIO configuration */
-		novatek,reset-gpio = <&tlmm 8 0x00>;
-		novatek,irq-gpio = <&tlmm 9 0x2001>;
-
-		/* 672A, 525B, 675, 526 */
-		novatek,swrst-n8-addr = <0x03F0FE>;
-		novatek,spi-rd-fast-addr = <0x03F310>;
 	};
 };
