--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -70,7 +70,7 @@ config DRM_PANEL_PANASONIC_VVX10F034N00
 	depends on BACKLIGHT_CLASS_DEVICE
 	help
 	  Say Y here if you want to enable support for Panasonic VVX10F034N00
-	  WUXGA (1920x1200) Novatek NT1397-based DSI panel as found in some
+	  WUXGA (1920x1200) NT1397-based DSI panel as found in some
 	  Xperia Z2 tablets
 
 config DRM_PANEL_SAMSUNG_S6E3HA2
